--- a/bundle.yaml
+++ b/bundle.yaml
@@ -11727,6 +11727,11 @@ spec:
                   notice in any release. \n This is experimental and may change significantly
                   without backward compatibility in any release."
                 properties:
+                  ObjectStorageConfigFile:
+                    description: ObjectStorageConfigFile specifies the path of the
+                      object storage configuration file. Can't be used with ObjectStorageConfig
+                      at the same time.
+                    type: string
                   baseImage:
                     description: 'Thanos base image if other than default. Deprecated:
                       use ''image'' instead'
@@ -14008,6 +14013,11 @@ spec:
             description: 'Specification of the desired behavior of the ThanosRuler
               cluster. More info: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#spec-and-status'
             properties:
+              ObjectStorageConfigFile:
+                description: ObjectStorageConfigFile specifies the path of the object
+                  storage configuration file. Can't be used with ObjectStorageConfig
+                  at the same time.
+                type: string
               affinity:
                 description: If specified, the pod's scheduling constraints.
                 properties:
