--- a/bundle.yaml
+++ b/bundle.yaml
@@ -11727,11 +11727,6 @@ spec:
                   notice in any release. \n This is experimental and may change significantly
                   without backward compatibility in any release."
                 properties:
-                  ObjectStorageConfigFile:
-                    description: ObjectStorageConfigFile specifies the path of the
-                      object storage configuration file. Can't be used with ObjectStorageConfig
-                      at the same time.
-                    type: string
                   baseImage:
                     description: 'Thanos base image if other than default. Deprecated:
                       use ''image'' instead'
@@ -11907,6 +11902,11 @@ spec:
                     required:
                     - key
                     type: object
+                  objectStorageConfigFile:
+                    description: ObjectStorageConfigFile specifies the path of the
+                      object storage configuration file. Can't be used with ObjectStorageConfig
+                      at the same time.
+                    type: string
                   resources:
                     description: Resources defines the resource requirements for the
                       Thanos sidecar. If not provided, no requests/limits will be
@@ -14013,11 +14013,6 @@ spec:
             description: 'Specification of the desired behavior of the ThanosRuler
               cluster. More info: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#spec-and-status'
             properties:
-              ObjectStorageConfigFile:
-                description: ObjectStorageConfigFile specifies the path of the object
-                  storage configuration file. Can't be used with ObjectStorageConfig
-                  at the same time.
-                type: string
               affinity:
                 description: If specified, the pod's scheduling constraints.
                 properties:
@@ -16942,6 +16937,11 @@ spec:
                 required:
                 - key
                 type: object
+              objectStorageConfigFile:
+                description: ObjectStorageConfigFile specifies the path of the object
+                  storage configuration file. Can't be used with ObjectStorageConfig
+                  at the same time.
+                type: string
               paused:
                 description: When a ThanosRuler deployment is paused, no actions except
                   for deletion will be performed on the underlying objects.
