--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -4774,11 +4774,6 @@ spec:
                   notice in any release. \n This is experimental and may change significantly
                   without backward compatibility in any release."
                 properties:
-                  ObjectStorageConfigFile:
-                    description: ObjectStorageConfigFile specifies the path of the
-                      object storage configuration file. Can't be used with ObjectStorageConfig
-                      at the same time.
-                    type: string
                   baseImage:
                     description: 'Thanos base image if other than default. Deprecated:
                       use ''image'' instead'
@@ -4954,6 +4949,11 @@ spec:
                     required:
                     - key
                     type: object
+                  objectStorageConfigFile:
+                    description: ObjectStorageConfigFile specifies the path of the
+                      object storage configuration file. Can't be used with ObjectStorageConfig
+                      at the same time.
+                    type: string
                   resources:
                     description: Resources defines the resource requirements for the
                       Thanos sidecar. If not provided, no requests/limits will be
