--- a/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
@@ -37,11 +37,6 @@ spec:
             description: 'Specification of the desired behavior of the ThanosRuler
               cluster. More info: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#spec-and-status'
             properties:
-              ObjectStorageConfigFile:
-                description: ObjectStorageConfigFile specifies the path of the object
-                  storage configuration file. Can't be used with ObjectStorageConfig
-                  at the same time.
-                type: string
               affinity:
                 description: If specified, the pod's scheduling constraints.
                 properties:
@@ -2966,6 +2961,11 @@ spec:
                 required:
                 - key
                 type: object
+              objectStorageConfigFile:
+                description: ObjectStorageConfigFile specifies the path of the object
+                  storage configuration file. Can't be used with ObjectStorageConfig
+                  at the same time.
+                type: string
               paused:
                 description: When a ThanosRuler deployment is paused, no actions except
                   for deletion will be performed on the underlying objects.
