--- a/bundle.yaml
+++ b/bundle.yaml
@@ -11885,7 +11885,8 @@ spec:
                     type: string
                   objectStorageConfig:
                     description: ObjectStorageConfig configures object storage in
-                      Thanos.
+                      Thanos. Alternative to ObjectStorageConfigFile, and lower order
+                      priority.
                     properties:
                       key:
                         description: The key of the secret to select from.  Must be
@@ -11904,8 +11905,8 @@ spec:
                     type: object
                   objectStorageConfigFile:
                     description: ObjectStorageConfigFile specifies the path of the
-                      object storage configuration file. Can't be used with ObjectStorageConfig
-                      at the same time.
+                      object storage configuration file. When used alongside with
+                      ObjectStorageConfig, ObjectStorageConfigFile takes precedence.
                     type: string
                   resources:
                     description: Resources defines the resource requirements for the
@@ -16922,6 +16923,7 @@ spec:
                 type: object
               objectStorageConfig:
                 description: ObjectStorageConfig configures object storage in Thanos.
+                  Alternative to ObjectStorageConfigFile, and lower order priority.
                 properties:
                   key:
                     description: The key of the secret to select from.  Must be a
@@ -16939,8 +16941,8 @@ spec:
                 type: object
               objectStorageConfigFile:
                 description: ObjectStorageConfigFile specifies the path of the object
-                  storage configuration file. Can't be used with ObjectStorageConfig
-                  at the same time.
+                  storage configuration file. When used alongside with ObjectStorageConfig,
+                  ObjectStorageConfigFile takes precedence.
                 type: string
               paused:
                 description: When a ThanosRuler deployment is paused, no actions except
