--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -4932,7 +4932,8 @@ spec:
                     type: string
                   objectStorageConfig:
                     description: ObjectStorageConfig configures object storage in
-                      Thanos.
+                      Thanos. Alternative to ObjectStorageConfigFile, and lower order
+                      priority.
                     properties:
                       key:
                         description: The key of the secret to select from.  Must be
@@ -4951,8 +4952,8 @@ spec:
                     type: object
                   objectStorageConfigFile:
                     description: ObjectStorageConfigFile specifies the path of the
-                      object storage configuration file. Can't be used with ObjectStorageConfig
-                      at the same time.
+                      object storage configuration file. When used alongside with
+                      ObjectStorageConfig, ObjectStorageConfigFile takes precedence.
                     type: string
                   resources:
                     description: Resources defines the resource requirements for the
