--- a/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
@@ -2946,6 +2946,7 @@ spec:
                 type: object
               objectStorageConfig:
                 description: ObjectStorageConfig configures object storage in Thanos.
+                  Alternative to ObjectStorageConfigFile, and lower order priority.
                 properties:
                   key:
                     description: The key of the secret to select from.  Must be a
@@ -2963,8 +2964,8 @@ spec:
                 type: object
               objectStorageConfigFile:
                 description: ObjectStorageConfigFile specifies the path of the object
-                  storage configuration file. Can't be used with ObjectStorageConfig
-                  at the same time.
+                  storage configuration file. When used alongside with ObjectStorageConfig,
+                  ObjectStorageConfigFile takes precedence.
                 type: string
               paused:
                 description: When a ThanosRuler deployment is paused, no actions except
