--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,15 @@ jobs:
         use-quiet-mode: 'yes'
         config-file: '.github/workflows/.mlc_config.json'
       continue-on-error: true
+  check-metrics:
+    runs-on: ubuntu-latest
+    name: Check prometheus metrics
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-go@v2
+      with:
+        go-version: ${{ env.golang-version }}
+    - run: make check-metrics
   build:
     runs-on: ${{ matrix.os }}
     strategy:
