--- a/example/thanos/sidecar-service.yaml
+++ b/example/thanos/sidecar-service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: thanos-query
   name: thanos-sidecar
   namespace: default
-  labels:
-    app: thanos-sidecar
 spec:
   clusterIP: None
-  selector:
-    prometheus: self
   ports:
   - name: grpc
     port: 10901
     targetPort: grpc
+  selector:
+    prometheus: self
