--- a/example/thanos/thanos-ruler-service.yaml
+++ b/example/thanos/thanos-ruler-service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: thanos-ruler
-  namespace: default
   labels:
     app: thanos-ruler
+  name: thanos-ruler
+  namespace: default
 spec:
-  selector:
-    app: thanos-ruler
+  clusterIP: None
   ports:
   - name: grpc
     port: 10901
@@ -15,3 +14,5 @@ spec:
   - name: http
     port: 10902
     targetPort: web
+  selector:
+    app: thanos-ruler
