--- a/example/thanos/prometheus-servicemonitor.yaml
+++ b/example/thanos/prometheus-servicemonitor.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
+    app: prometheus
     prometheus: self
   name: prometheus-self
   namespace: default
