--- a/example/thanos/sidecar-service.yaml
+++ b/example/thanos/sidecar-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: thanos-query
+    app: thanos-sidecar
   name: thanos-sidecar
   namespace: default
 spec:
