--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,17 +1,16 @@
 name: publish
 on:
+  workflow_dispatch:
   workflow_run:
     workflows:
-    - "checks"
-    - "unit"
-    - "e2e"
+      - "checks"
+      - "unit"
+      - "e2e"
     types: [completed]
     branches:
       - 'release-*'
       - 'master'
       - 'main'
-    tags:
-      - 'v*'
 
 env:
   golang-version: '1.16'
@@ -19,7 +18,11 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     name: Publish container images
-    if: ${{ github.event_name == 'push' && github.event.workflow_run.conclusion == 'success' }}
+    if: > 
+      ${{ 
+        github.event.workflow_run.event == 'push' && 
+        github.event.workflow_run.conclusion == 'success'
+      }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
