--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,8 +3,9 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows:
-      - "checks"
-      - "unit"
+      # "publish" workflow will start on ANY other workflow specified in this list.
+      # Specifying the one that is potentially longest running will delay publishing
+      # and allow checking status of other workflows in steps
       - "e2e"
     types: [completed]
     branches:
@@ -24,6 +25,25 @@ jobs:
         github.event.workflow_run.conclusion == 'success'
       }}
     steps:
+      - name: Wait for checks to succeed
+        uses: fountainhead/action-wait-for-check@v1.0.0
+        id: wait-for-checks
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: checks
+      - name: Wait for unit tests to succeed
+        uses: fountainhead/action-wait-for-check@v1.0.0
+        id: wait-for-unit
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: unit
+      - name: Exit if other workflows didn't succeeded
+        if: >
+          ${{
+            steps.wait-for-checks.outputs.conclusion != 'success' &&
+            steps.wait-for-unit.outputs.conclusion != 'success'
+          }}
+        run: exit 1
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install Go
