--- a/bundle.yaml
+++ b/bundle.yaml
@@ -12383,6 +12383,9 @@ spec:
                     remoteTimeout:
                       description: Timeout for requests to the remote write endpoint.
                       type: string
+                    sendExemplars:
+                      description: Only valid in Prometheus versions 2.15.0 and newer.
+                      type: boolean
                     tlsConfig:
                       description: TLS Config to use for remote write.
                       properties:
